common_base_util: 新增 ViewPagerFragmentAdapter类可根据数据源更新fragment(use->NotifyViewPagerAc) common_base_ui  :

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,7 @@
         <activity android:name=".naviga.CodenavigationAc"/>
 
         <activity android:name=".viewpager.ViewpageAc"/>
+        <activity android:name=".viewpager.NotifyViewPagerAc"/>
 
         <activity android:name=".LiveDataAc"/>
 
