common_base_util: 新增 SharePreferences相关代理类和扩展类 common_base_ui  :

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,8 @@
 
         <activity android:name=".LiveDataAc"/>
 
+        <activity android:name=".sp.SPAc"/>
+
         <activity android:name=".motionlayout.MotionLayoutAc"/>
         <activity android:name=".motionlayout.MotionLayoutAc2"/>
         <activity android:name=".motionlayout.MotionBallsAc"/>
