--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,7 +105,21 @@
 
         <activity android:name=".calendar.WriteCalendarAc"/>
 
-
+        <activity android:name=".accessibility.AdSkipAc"/>
+        <!-- AccessbilityService -->
+        <service
+            android:name=".accessibility.AdGunAccessibilityService"
+            android:exported="false"
+            android:label="AD 滚犊子！！！"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/ad_gun_service_config" />
+        </service>
+        
     </application>
 
 
