common_base_util: 新增 TextViewExt.kt 根据宽度可以自适应文字大小 common_base_ui  :

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,7 +92,7 @@
         <activity android:name=".motionlayout.MotionFakeBossListAc"/>
 
         <activity android:name=".room.RoomAc"/>
-
+        <activity android:name="com.fido.common.textview.TextViewAc"/>
 
         <!--注册 FlutterActivity-->
         <!--<activity
