common_base_util: 新增 ViewPager common_base_ui  : RvScrollWindownActivity待修改

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,8 @@
 
         <activity android:name=".rv.RvAc"/>
         <activity android:name=".rv.RvDragSwipeAc"/>
+        <activity android:name=".rv.RvHorStickyAc"/>
+        <activity android:name=".rv.RvScrollWithWindownAc"/>
 
         <activity android:name=".time.IntervalTimeAc"/>
 
