common_base_util: 链式DialogManager 管理类 common_base_ui  :

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -121,7 +121,10 @@
                 android:name="android.accessibilityservice"
                 android:resource="@xml/ad_gun_service_config" />
         </service>
-        
+
+
+        <activity android:name=".eventbus.ac.EventBusAc"/>
+
     </application>
 
 
