--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -148,6 +148,8 @@
 
         <activity android:name=".pop.DialogChainAc"/>
 
+        <activity android:name=".annotation.AnnotationAc"/>
+
     </application>
 
 
