--- a/common_base_util/src/main/AndroidManifest.xml
+++ b/common_base_util/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
           android:name="androidx.core.content.FileProvider"
           android:authorities="${applicationId}.fido.common.common_base_util.fileprovider"
           android:exported="false"
+          tools:replace="android:resource"
           android:grantUriPermissions="true">
          <meta-data
              android:name="android.support.FILE_PROVIDER_PATHS"
