--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ plugins {
     id 'com.android.library' version '7.4.0-alpha10' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.7.10' apply false
+
+    id("com.google.devtools.ksp") version "1.6.21-1.0.5" apply false
 }
 
 apply from: "dependent.gradle"
