--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.7.10' apply false
 
-    id("com.google.devtools.ksp") version "1.6.21-1.0.5" apply false
+    //这里一定要跟当前的 kotlin 版本对应 可以通过 KotlinVersion.CURRENT 查看当前kotlin版本
+    id 'com.google.devtools.ksp' version "1.7.10-1.0.6" apply false
 }
 
 apply from: "dependent.gradle"
