--- a/.github/workflows/github-action-demo.yml
+++ b/.github/workflows/github-action-demo.yml
@@ -4,16 +4,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    # copy git 仓库到虚拟机上
     - name: 'Checkout codes'
       uses: actions/checkout@v1
-    # 获取最新一条提交的git log  
     - name: Get Git Log
       id: git_log
       uses: Edisonboy/latest-git-log-action@main
       with:
         tag: origin/master
-    # 发送邮件    
     - name: Send email
       uses: dawidd6/action-send-mail@v3
       with:
@@ -24,4 +21,4 @@ jobs:
         subject: Github Actions job result
         to: ${{secrets.MAIL_TOUSERNAME}}
         from: ${{secrets.MAIL_USERNAME}}
-        body: ${{github.repository}} push log : ${{steps.git_log.outputs.log}}
+        body: Build job of ${{github.repository}} completed successfully! ${{steps.git_log.outputs.log}}
