--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,8 @@ buildscript {
 }
 
 plugins {
-    id 'com.android.application' version '7.4.0-alpha10' apply false
-    id 'com.android.library' version '7.4.0-alpha10' apply false
+    id 'com.android.application' version '7.4.2' apply false
+    id 'com.android.library' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.7.10' apply false
 
