common_base_util: test-tag:v0.3.431 common_base_ui  :

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -123,4 +123,4 @@ jobs:
           from: ${{secrets.MAIL_USERNAME}}
           to: ${{secrets.MAIL_TOUSERNAME}}
           body: Build job of ${{github.repository}} completed successfully!
-#          html_body: file://README.html
+          html_body: file://output.html
