common_base_util: 通过不同Activity设置processname进行多进程测试，同时验证了多进程中静态成员的失效。 common_base_ui  :

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -148,7 +148,12 @@
 
         <activity android:name=".annotation.AnnotationAc"/>
 
-    </application>
+        <activity android:name=".muilt_process.GloableProcessAc" android:launchMode="singleTask" android:process="com.fido.test"/>
+        <activity android:name=".muilt_process.PrivateProcessAc" android:process=":fido1"/>
+        <!-- 指定launchMode 为singleTask 并设置 taskAffinity 实现小程序效果 -->
+        <activity android:name=".muilt_process.Private2ProcessAc" android:process=":fido2" android:launchMode="singleTask" android:taskAffinity=":fido2"/>
+        <activity android:name=".muilt_process.Private3ProcessAc" android:process=":fido2" android:launchMode="singleTask" android:taskAffinity=":fido2"/>
 
+    </application>
 
 </manifest>
