common_base_util: 新增悬浮 FloatingImageView.kt common_base_ui  :

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -154,6 +154,9 @@
         <activity android:name=".muilt_process.Private2ProcessAc" android:process=":fido2" android:launchMode="singleTask" android:taskAffinity=":fido2"/>
         <activity android:name=".muilt_process.Private3ProcessAc" android:process=":fido2" android:launchMode="singleTask" android:taskAffinity=":fido2"/>
 
+        <activity android:name=".view.FloatingImageAc"/>
+
+
     </application>
 
 </manifest>
