--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ plugins {
 
     //这里一定要跟当前的 kotlin 版本对应 可以通过 KotlinVersion.CURRENT 查看当前kotlin版本
     id 'com.google.devtools.ksp' version "1.7.10-1.0.6" apply false
+
+    // 在 Project 级别的 build.gradle 中添加我们的插件依赖
+//    alias(libs.plugins.fidoASM) apply false
+    id 'com.fido' version "1.0.0"
 }
 
 apply from: "dependent.gradle"
