common_base_util: 新增 CodeRainView common_base_ui  :

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -160,6 +160,8 @@
 
         <activity android:name=".viewpager.Vp2Ac"/>
 
+        <activity android:name=".customview.CustomViewAc"/>
+
     </application>
 
 </manifest>
