--- a/app/build.gradle
+++ b/app/build.gradle
@@ -144,6 +144,8 @@ dependencies {
     implementation "com.github.SevenUpup.annotation:annotation:0.0.13"
     ksp('com.github.SevenUpup.annotation:compiler:0.0.13')
 
+
+    implementation group: 'org.ow2.asm', name: 'asm-commons', version: '9.6'
 }
 
 /**
