common_base_util: 插装代码测试修改指定方法 common_base_ui  :

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ plugins {
     //app 的 module 中的 build.gradle 中引用插件：
 //    alias(libs.plugins.fidoASM) apply false
     id 'com.fido' version "1.0.0"
+    id 'com.fido.plugin.permission' version "1.0.0"
 }
 
 android {
