--- a/fido_asm/gradle.properties
+++ b/fido_asm/gradle.properties
@@ -1,3 +1,8 @@
 GROUP_ID=com.fido
 PLUGIN_ARTIFACT_ID=com.fido.gradle.plugin
 VERSION=1.0.0
+
+
+PLUGIN_PERMISSION_ID=com.fido.plugin.permission
+PLUGIN_PERMISSION_ARTIFACT_ID=com.fido.plugin.permission.gradle.plugin
+PERMISSION_PLUGIN_VERSION=1.0.0
