--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ plugins {
 
     // 在 Project 级别的 build.gradle 中添加我们的插件依赖
 //    alias(libs.plugins.fidoASM) apply false
-    id 'com.fido' version "1.0.0"
-    id 'com.fido.plugin.permission' version "1.0.0"
+//    id 'com.fido' version "1.0.0"
+    id 'com.fido.plugin.asm' version "1.0.0"
 }
 
 apply from: "dependent.gradle"
