--- a/fido_asm/gradle.properties
+++ b/fido_asm/gradle.properties
@@ -1,5 +1,5 @@
-GROUP_ID=com.fido
-PLUGIN_ARTIFACT_ID=com.fido.gradle.plugin
+GROUP_ID=com.fido.plugin.asm
+PLUGIN_ARTIFACT_ID=com.fido.plugin.asm.gradle.plugin
 VERSION=1.0.0
 
 
