common_base_util: HookClassVisitorFactory.kt待完善 common_base_ui  :

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -165,10 +165,10 @@ ViewClickPluginParameter {
     uncheckViewOnClickAnnotation = "com.fido.common.common_utils.asm.annotation.UnCheckViewOnClick"
 }
 //这么写会执行最后一个 ReplaceClassPluginParameter
-ReplaceClassPluginParameter {
-    originClass = "androidx.appcompat.app.AppCompatActivity"
-    targetClass = "com.fido.common.common_utils.base_asm.BaseAsmActivity"
-}
+//ReplaceClassPluginParameter {
+//    originClass = "androidx.appcompat.app.AppCompatActivity"
+//    targetClass = "com.fido.common.common_utils.base_asm.BaseAsmActivity"
+//}
 ReplaceClassPluginParameter {
     originClass = "android.widget.ImageView"
     targetClass = "com.fido.common.common_utils.asm.replace.MonitorImageView"
@@ -179,7 +179,12 @@ ToastPluginParameter {
     toasterClass = "com.fido.common.common_utils.asm.toast.HToaster"
     showToastMethodName = "hToast"
 }
-
+HookClassParameter {
+    className = "com.fido.common.common_utils.asm.ASMTestAc"
+    parameterName = "A"
+    parameterType = "ch"
+    parameterNewValue = "false"
+}
 /**
  * 统一依赖用
  */
