common_base_util: ASM 插件 修改全局类变/常量，含全局静态变/常量，const val 修饰的变量目前暂无法修改 common_base_ui  :

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -185,9 +185,9 @@ hookCustomMethod{
 //    showToastMethodName = "hToast"
 //}
 HookClassParameter {
-    className = ["com.fido.common.common_utils.asm.ASMTestAc","*","*","*","*","*","*"]
-    parameterName = ["B","H","A","G","K","str","mChar"]
-    parameterNewValue = ["6666","HT",false,10086,-10086,"newStr","newmChar"]
+    className = ["com.fido.common.common_utils.asm.ASMTestAc","*","*","*","*","*","*","*"]
+    parameterName = ["B","H","A","G","K","str","mChar","LL"]
+    parameterNewValue = ["6666","HT",false,10086,-10086,"newStr","newmChar","LiaoLiao"]
 }
 /**
  * 统一依赖用
