--- a/fido_asm/gradle.properties
+++ b/fido_asm/gradle.properties
@@ -3,6 +3,6 @@ PLUGIN_ARTIFACT_ID=com.fido.plugin.asm.gradle.plugin
 VERSION=1.0.0
 
 
-PLUGIN_PERMISSION_ID=com.fido.plugin.permission
-PLUGIN_PERMISSION_ARTIFACT_ID=com.fido.plugin.permission.gradle.plugin
-PERMISSION_PLUGIN_VERSION=1.0.0
+POM_NAME=fido_asm
+POM_ARTIFACT_ID=fido_asm
+POM_PACKAGING=aar
