--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,9 +5,7 @@ plugins {
     id 'com.google.devtools.ksp'  // 根布局build.gradle 引入的 版本号要跟当前项目的 kotlin version 对应
 
     //app 的 module 中的 build.gradle 中引用插件：
-//    alias(libs.plugins.fidoASM) apply false
-//    id 'com.fido' version "1.0.0"
-    id 'com.fido.plugin.asm' version "1.0.0"
+//    id 'com.fido.plugin.asm' version "1.0.0"
 }
 
 android {
@@ -156,13 +154,12 @@ dependencies {
 //targetClassName = "com.fido.common.common_utils.asm.KtAsmToast",
 //targetMethodName = "showKtToast",
 //handleMode = "A"
-hookCustomMethod{
+//hookCustomMethod{
 //    configs = [
 //            new MethodsConfig("com.fido.common.common_utils.asm.KtAsmToast","showKtToast","com.fido.common.common_utils.asm.ASMTestAc", "showMyToast","A"),
 //            new MethodsConfig("com.fido.common.common_utils.asm.KtAsmToast","log99","com.fido.common.common_utils.asm.ASMTestAc", "log66","A"),
 //    ]
-
-}
+//}
 
 //ViewClickPluginParameter {
 //    onClickClass = "com.fido.common.common_utils.asm.clickcheck.ClickViewMonitor"
@@ -184,11 +181,11 @@ hookCustomMethod{
 //    toasterClass = "com.fido.common.common_utils.asm.toast.HToaster"
 //    showToastMethodName = "hToast"
 //}
-HookClassParameter {
-    className = ["com.fido.common.common_utils.asm.ASMTestAc","*","*","*","*","*","*","*"]
-    parameterName = ["B","H","A","G","K","str","mChar","LL"]
-    parameterNewValue = ["6666","HT",false,10086,-10086,"newStr","newmChar","LiaoLiao"]
-}
+//HookClassParameter {
+//    className = ["com.fido.common.common_utils.asm.ASMTestAc","*","*","*","*","*","*","*"]
+//    parameterName = ["B","H","A","G","K","str","mChar","LL"]
+//    parameterNewValue = ["6666","HT",false,10086,-10086,"newStr","newmChar","LiaoLiao"]
+//}
 /**
  * 统一依赖用
  */
