common_base_util: 完善ASM Plugin,修复hook final int 类型时初始值为0，导致为在<init>方法下生成对应字节码（解决方法，赋值为非0的其他值,hahahah） common_base_ui  :

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'com.google.devtools.ksp'  // 根布局build.gradle 引入的 版本号要跟当前项目的 kotlin version 对应
 
     //app 的 module 中的 build.gradle 中引用插件：
-//    id 'com.fido.plugin.asm' version "1.0.0"
+    id 'com.fido.plugin.asm'
 }
 
 android {
@@ -181,11 +181,11 @@ dependencies {
 //    toasterClass = "com.fido.common.common_utils.asm.toast.HToaster"
 //    showToastMethodName = "hToast"
 //}
-//HookClassParameter {
-//    className = ["com.fido.common.common_utils.asm.ASMTestAc","*","*","*","*","*","*","*"]
-//    parameterName = ["B","H","A","G","K","str","mChar","LL"]
-//    parameterNewValue = ["6666","HT",false,10086,-10086,"newStr","newmChar","LiaoLiao"]
-//}
+HookClassParameter {  // private final int INT_VAL = 0; 全局常量final int 类型时 赋值0，这种方式在字节码中init方法不会进行赋值，所以最后初始值不要设置为0
+    className = ["com.fido.common.common_utils.asm.ASMTestAc","*","*","*","*","*","*","*","*","*","*","*"]
+    parameterName = ["B","H","A","G","K","str","mChar","LL","STATCI_VAL_DOUBLE","STATCI_VAL_LONG","INT_VAL","INT_PROT","INT_PUB"]
+    parameterNewValue = ["6666","HT",false,10086,-10086,"newStr","newmChar","LiaoLiao",16.0,555L,777,888,654]
+}
 /**
  * 统一依赖用
  */
